mbtiles/tests/snapshots/copy__databases@hash__v2.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"3BCDEE3F52407FF1315629298CB99133\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_with_hash
  sql: "CREATE TABLE tiles_with_hash (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    tile_hash TEXT,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  3, 6, 7, blob(root), \"63A9F0EA7BB98050796B649E85481845\"  )"
    - "(  5, 0, 0, blob(same), \"51037A4A37730F52C8732586D3AAA316\"  )"
    - "(  5, 0, 1, blob(), \"D41D8CD98F00B204E9800998ECF8427E\"  )"
    - "(  5, 1, 1, blob(edit-v2), \"FF76830FF90D79BB335884F256031731\"  )"
    - "(  5, 1, 2, blob(not-empty), \"99DEE0E66806ECF1C20C09F64B2C0A34\"  )"
    - "(  5, 1, 3, blob(), \"D41D8CD98F00B204E9800998ECF8427E\"  )"
    - "(  5, 3, 7, blob(new), \"22AF645D1859CB5CA6DA0C484F1F37EA\"  )"
    - "(  5, 3, 8, blob(new), \"22AF645D1859CB5CA6DA0C484F1F37EA\"  )"
    - "(  6, 0, 3, blob(same), \"51037A4A37730F52C8732586D3AAA316\"  )"
    - "(  6, 0, 5, blob(1-keep-1-rm), \"535A5575B48444EDEB926815AB26EC9B\"  )"
    - "(  6, 1, 4, blob(edit-v2a), \"03132BFACDB00CC63D6B7DD98D974DD5\"  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles_with_hash
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tiles_with_hash"
  values: ~
