mbtiles/tests/snapshots/copy__databases@hash__v2z.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"A18D0C39730FB52E5A547F096F5C60E8\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_with_hash
  sql: "CREATE TABLE tiles_with_hash (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    tile_hash TEXT,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  3, 6, 7, blob(1F8B08000000000000FF2BCACF2F01005BF9F41604000000), \"0A62AF3A2A3D38C0E8FF098A684C3EC1\"  )"
    - "(  5, 0, 0, blob(1F8B08000000000000FF2B4ECC4D050044F150FC04000000), \"98AD49106F1CE0AA003027C229A70F7E\"  )"
    - "(  5, 0, 1, blob(1F8B08000000000000FF03000000000000000000), \"163BE0A88C70CA629FD516DBAADAD96A\"  )"
    - "(  5, 1, 1, blob(1F8B08000000000000FF4B4DC92CD12D330200C489DF2607000000), \"39794F1D8EEDEE7777FA89D4FD8D3154\"  )"
    - "(  5, 1, 2, blob(1F8B08000000000000FFCBCB2FD14DCD2D28A9040086D4937609000000), \"94335B9F0CCBA1C1CB7F91B49EB34344\"  )"
    - "(  5, 1, 3, blob(1F8B08000000000000FF03000000000000000000), \"163BE0A88C70CA629FD516DBAADAD96A\"  )"
    - "(  5, 3, 7, blob(1F8B08000000000000FFCB4B2D07004544E36B03000000), \"E1A151E7B18F8B2C53F94DF4CA201026\"  )"
    - "(  5, 3, 8, blob(1F8B08000000000000FFCB4B2D07004544E36B03000000), \"E1A151E7B18F8B2C53F94DF4CA201026\"  )"
    - "(  6, 0, 3, blob(1F8B08000000000000FF2B4ECC4D050044F150FC04000000), \"98AD49106F1CE0AA003027C229A70F7E\"  )"
    - "(  6, 0, 5, blob(1F8B08000000000000FF33D4CD4E4D2DD035D42DCA050026D508C30B000000), \"3CD93E79D6812F995906036D24282DBE\"  )"
    - "(  6, 1, 4, blob(1F8B08000000000000FF4B4DC92CD12D334A04006367987408000000), \"59A99A65DF08F16CE984BDFA6EBC95CF\"  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles_with_hash
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tiles_with_hash"
  values: ~
